@@ -257,12 +257,12 @@ if [ X"${KERNEL_NAME}" == X'LINUX' ]; then
 
         # Ubuntu version number and code name:
         #   - 14.04: trusty
-        #   - 15.10: wily
+        #   - 16.04: xenial
         export DISTRO_VERSION="$(grep 'DISTRIB_RELEASE' /etc/lsb-release | awk -F'=' '{print $2}')"
         export DISTRO_CODENAME="$(grep 'DISTRIB_CODENAME' /etc/lsb-release | awk -F'=' '{print $2}')"
 
-        # Unsupported releases: 12.x, 13.x, 14.10, 15.04
-        if echo "${DISTRO_VERSION}" | grep -E '^(12|13|14\.10|15\.04)' &>/dev/null ; then
+        # Unsupported releases: 12.x, 13.x, 14.10, 15.x
+        if echo "${DISTRO_VERSION}" | grep -E '^(12|13|14\.10|15\.)' &>/dev/null ; then
             export UNSUPPORTED_RELEASE='YES'
         fi
     elif [ -f /etc/debian_version ]; then
